| Summary: | ASTERISK-22344: Missing xml doc configOption 'type' for both 'system' and 'global' configObjects | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-08-19 13:46:40 | Date Closed: | 2013-08-22 16:30:01 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | SVN 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) asterisk22344.patch | |
| Description: | res_pjsip has two configuration objects, "system" and "global" that need their "type" configuration options documented.
| ||
| Comments: | By: Rusty Newton (rnewton) 2013-08-19 13:51:11.162-0500 patch attached By: Mark Michelson (mmichelson) 2013-08-19 13:54:31.392-0500 ship it! | ||