Fix missing xml doc configOption 'type' for for both 'system' and 'global' configObjects

(issue ASTERISK-22344)
(closes issue ASTERISK-22344)


git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@397481 65c4cc65-6c06-0410-ace0-fbb531ad65f3